# produktive

./: .dockerignore  .env.bot.example  .env.example  .env.mcp.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.bot  Dockerfile.deploy-worker  Dockerfile.mcp  Dockerfile.worker  LOG_STORAGE.md  PRIVACY.md  README.md  TERMS.md  context.md  justfile  package.json  pricing.json  prisma.config.ts  railpack.json  tsconfig.json  worker-configuration.d.ts  wrangler.jsonc
.deepsec/: README.md  deepsec.config.ts  pnpm-lock.yaml
.github/workflows/: docker.yml
crates/ai/: Cargo.toml
crates/ai/src/: lib.rs  (+3 more)
crates/api/: Cargo.toml
crates/api/src/: actor_profiles.rs  agent_tools.rs  ai_models.rs  ai_usage.rs  auth.rs  billing_usage.rs  config.rs  custom_domain_sweep.rs  digest.rs  email.rs  error.rs  integration_actions.rs  issue_helpers.rs  issue_history.rs  log_alerts.rs  log_db.rs  log_hot_cache.rs  log_retention_sweep.rs  logship.rs  logstore.rs  main.rs  mcp.rs  note_storage.rs  notification_webhook.rs  openapi.rs  permissions.rs  public_graphql.rs  rate_limit.rs  realtime.rs  regions.rs  security_events.rs  slug.rs  state.rs  status_summary_cache.rs  storage.rs  target.rs
crates/api/src/auth/: jwt.rs  mod.rs  password.rs  routes.rs  session_cleanup.rs
crates/api/src/billing/: catalog.rs  deploy_sweep.rs  deploy_usage.rs  display.rs  mod.rs  snapshot.rs  sweep.rs  usage.rs  webhooks.rs
crates/api/src/graphql/: cursor.rs  mod.rs
crates/api/src/http/: admin.rs  ai.rs  ai_mcp.rs  auth.rs  billing.rs  chats.rs  checks.rs  cors.rs  custom_domains.rs  deployments.rs  dev.rs  discord.rs  favorites.rs  github.rs  health.rs  inbox.rs  incidents.rs  internal_workers.rs  invitations.rs  invites.rs  issue_statuses.rs  issues.rs  labels.rs  logs.rs  mcp_keys.rs  members.rs  mod.rs  monitors.rs  notes.rs  notifications.rs  oauth.rs  object_storage.rs  object_storage_service.rs  onboarding.rs  preferences.rs  pricing.rs  projects.rs  public_api.rs  public_sandboxes.rs  public_status.rs  (+14 more)
crates/api/src/middleware/: mod.rs  workspace.rs
crates/api/src/scheduler/: mod.rs  record.rs
crates/autumn/: Cargo.toml
crates/autumn-rs/: Cargo.toml  README.md
crates/autumn-rs/examples/: attach_plan.rs  basic_check_track.rs
crates/autumn-rs/src/: client.rs  config.rs  error.rs  lib.rs  request.rs
crates/autumn-rs/src/builders/: attach.rs  cancel.rs  check.rs  mod.rs  track.rs
crates/autumn-rs/src/models/: balance.rs  billing.rs  core.rs  customer.rs  entity.rs  events.rs  feature.rs  mod.rs  plan.rs  platform.rs  referrals.rs  shared.rs
crates/autumn-rs/src/resources/: balances.rs  billing.rs  customers.rs  entities.rs  events.rs  features.rs  mod.rs  plans.rs  platform.rs  referrals.rs
crates/autumn-rs/tests/: integration_mock.rs  serialization.rs
crates/autumn/src/: axum.rs  balances.rs  billing.rs  client.rs  customers.rs  entities.rs  error.rs  events.rs  features.rs  lib.rs  models.rs  plans.rs  platform.rs  referrals.rs  webhooks.rs
crates/billing/: Cargo.toml
crates/cloudflare/: Cargo.toml
crates/cloudrun/: Cargo.toml
crates/cloudrun/src/: auth.rs  client.rs  lib.rs  models.rs  provider.rs
crates/deploy/: Cargo.toml
crates/deploy-worker/: Cargo.toml
crates/deploy-worker/src/: main.rs
crates/deploy/src/: crypto.rs  error.rs  lib.rs  model.rs  provider.rs  regions.rs  state.rs
crates/depot/: Cargo.toml
crates/depot/src/: config.rs  lib.rs  provider.rs
crates/discord-bot/: Cargo.toml
crates/discord-bot/src/: agent_thread.rs  ai_usage.rs  commands.rs  env.rs  health.rs  main.rs  state.rs
crates/dsl/: Cargo.toml
crates/email/: Cargo.toml
crates/entity/: Cargo.toml
crates/fly/: Cargo.toml
crates/fly/src/: client.rs  lib.rs  models.rs  provider.rs
crates/log-migration/: Cargo.toml
crates/logging/: Cargo.toml
crates/logging/src/: ingest.rs  lib.rs  store.rs
crates/logs/: Cargo.toml  README.md
crates/logs/src/: client.rs  error.rs  event.rs  evlog.rs  lib.rs  logger.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: auth.rs  context.rs  error.rs  handler.rs  main.rs  operations.rs  state.rs  tools.rs  util.rs
crates/migration/: Cargo.toml
crates/polar/: Cargo.toml
crates/polar/src/: catalog.rs  checkouts.rs  client.rs  config.rs  customer_sessions.rs  customers.rs  error.rs  events.rs  lib.rs  models.rs  resources.rs  subscriptions.rs  webhooks.rs
crates/polar/src/resources/: checkouts.rs  customer_sessions.rs  events.rs  mod.rs  products.rs  subscriptions.rs
crates/probe/: Cargo.toml
crates/probe/src/: http_check.rs  icmp_check.rs  lib.rs  postgres_check.rs  redis_check.rs  ssh_check.rs  target.rs  tcp_check.rs
crates/tigris/: Cargo.toml
crates/tigris/src/: client.rs  error.rs  iam.rs  lib.rs  regions.rs  s3.rs
crates/unkey/: Cargo.toml  README.md
crates/unkey/src/: client.rs  config.rs  error.rs  lib.rs  models.rs
crates/unkey/src/resources/: apis.rs  identities.rs  keys.rs  mod.rs  permissions.rs  ratelimit.rs
crates/unkey/tests/: http.rs
crates/worker/: Cargo.toml
crates/worker/src/: main.rs
deploy/caddy/: .env.example  Caddyfile  README.md  docker-compose.yml
deploy/cloudflare-worker/: README.md  package.json  worker.js  wrangler.toml
docker/: Caddyfile  compose.postgres.yaml  compose.yaml  restart.sh  setup.sh  start.sh  stop.sh
docs/: code-organization.md  public-api.md
prisma/: auth.prisma  issue.prisma  schema.prisma
sdk/sandbox/: README.md  package.json  tsconfig.json
sdk/typescript/: README.md  package.json  tsconfig.test.json
src/: index.ts
src/emails/: auth.tsx  password-reset.tsx  verify-email.tsx
src/lib/: auth.ts  db.ts  env.ts  prisma.ts  resend.ts
src/middleware/: auth.ts
src/routes/: issue.ts
src/schema/: issue.ts
web/: .cta.json  .env.example  .oxfmtrc.json  .oxlintrc.json  codegen.ts  components.json  index.html  package.json  schema.graphql  tsconfig.json  vite.config.ts
web/dist-unminified/: index.html
web/public/: PRIVACY.md  TERMS.md
web/src/: main.tsx  routeTree.gen.ts  styles.css
workers/support-email/: package.json  wrangler.toml
(+1383 files in other folders)
