[workspace]
members = [
    "crates/ai",
    "crates/api",
    "crates/discord-bot",
    "crates/entity",
    "crates/mcp",
    "crates/migration",
    "crates/unkey",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "AGPL-3.0"

[workspace.dependencies]
anyhow = "1.0"
aes-gcm = "0.10"
async-trait = "0.1"
async-stream = "0.3"
argon2 = "0.5"
axum = "0.8"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
cookie = "0.18"
futures-core = "0.3"
hex = "0.4"
hmac = "0.12"
jsonwebtoken = "9"
rand_core = "0.6"
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
flaremail-rs = "0.1"
sea-orm = { version = "1.1", features = ["macros", "runtime-tokio-rustls", "sqlx-postgres", "with-chrono"] }
sea-orm-migration = { version = "1.1", default-features = false, features = ["cli", "runtime-tokio-rustls", "sqlx-postgres"] }
serenity = { version = "0.12", default-features = false, features = ["builder", "cache", "client", "gateway", "http", "model", "rustls_backend"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
time = "0.3"
tokio = { version = "1.49", features = ["macros", "net", "rt-multi-thread", "signal", "time"] }
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"
uuid = { version = "1.11", features = ["v4"] }
