[workspace]
resolver = "2"
members = [
    "crates/api",
    "crates/deploy",
    "crates/deploy-worker",
    "crates/dsl",
    "crates/email",
    "crates/polar",
    "crates/cloudflare",
    "crates/fly",
    "crates/entity",
    "crates/migration",
    "crates/probe",
    "crates/worker",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"
repository = "https://github.com/lassejlv/produktive"

[workspace.dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time", "net", "sync"] }
sea-orm = { version = "1.1", features = [
    "runtime-tokio-rustls",
    "sqlx-postgres",
    "macros",
    "with-uuid",
    "with-chrono",
] }
sea-orm-migration = { version = "1.1", features = [
    "runtime-tokio-rustls",
    "sqlx-postgres",
    "cli",
] }
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "json",
    "gzip",
    "stream",
] }
redis = { version = "0.32", features = ["aio", "tokio-rustls-comp", "connection-manager"] }
tokio-postgres = "0.7"
url = "2"
futures-util = "0.3"
object_store = { version = "0.12", features = ["aws"] }
surge-ping = "0.8"
jsonwebtoken = "9"
argon2 = "0.5"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1", features = ["v7", "v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
json5 = "0.4"
standardwebhooks = "1"
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "tokio1-rustls-tls"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
async-trait = "0.1"
utoipa = { version = "5", features = ["axum_extras", "uuid", "chrono"] }
chacha20poly1305 = { version = "0.10", features = ["std"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
