[package]
name = "produktive-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
aes-gcm.workspace = true
async-stream.workspace = true
argon2.workspace = true
axum = { workspace = true, features = ["multipart"] }
base64.workspace = true
chrono.workspace = true
cookie.workspace = true
futures-core.workspace = true
hex.workspace = true
hmac.workspace = true
jsonwebtoken.workspace = true
produktive-ai = { path = "../ai" }
produktive-entity = { path = "../entity" }
produktive-migration = { path = "../migration" }
unkey-rs = { path = "../unkey" }
rand_core.workspace = true
regex.workspace = true
reqwest.workspace = true
flaremail-rs.workspace = true
mail-parser.workspace = true
sea-orm.workspace = true
sea-orm-migration.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
uuid.workspace = true
