[package]
name = "unstatus-api"
version.workspace = true
edition.workspace = true

[[bin]]
name = "unstatus-api"
path = "src/main.rs"

[dependencies]
unstatus-entity = { path = "../entity" }
unstatus-migration = { path = "../migration" }
unstatus-dsl = { path = "../dsl" }
unstatus-probe = { path = "../probe" }
polar = { path = "../polar" }
email = { path = "../email" }

axum.workspace = true
tokio.workspace = true
sea-orm.workspace = true
sea-orm-migration.workspace = true
tower-http.workspace = true
reqwest.workspace = true
redis.workspace = true
url.workspace = true
futures-util.workspace = true
surge-ping.workspace = true
jsonwebtoken.workspace = true
argon2.workspace = true
rand.workspace = true
sha2.workspace = true
hex.workspace = true
uuid.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
standardwebhooks.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
async-trait.workspace = true
utoipa.workspace = true
