[package]
name = "produktive-api"
version.workspace = true
edition.workspace = true

[[bin]]
name = "produktive-api"
path = "src/main.rs"

[dependencies]
produktive-entity = { path = "../entity" }
migration = { package = "unstatus-migration", path = "../migration" }
produktive-dsl = { path = "../dsl" }
produktive-probe = { path = "../probe" }
produktive-deploy = { path = "../deploy" }
fly = { path = "../fly" }
tigris = { path = "../tigris" }
polar = { path = "../polar" }
produktive-cloudflare = { path = "../cloudflare" }
email = { path = "../email" }
sprites.workspace = true

axum.workspace = true
tokio.workspace = true
sea-orm.workspace = true
sea-orm-migration.workspace = true
tower-http = { workspace = true, features = ["catch-panic"] }
reqwest.workspace = true
redis.workspace = true
url.workspace = true
futures-util.workspace = true
surge-ping.workspace = true
jsonwebtoken.workspace = true
argon2.workspace = true
rand.workspace = true
sha2.workspace = true
hex.workspace = true
uuid.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
json5.workspace = true
standardwebhooks.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
async-trait.workspace = true
utoipa.workspace = true
