[package]
name = "autumn"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
axum = ["dep:axum"]

[dependencies]
axum = { workspace = true, optional = true }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
url.workspace = true

[dev-dependencies]
axum.workspace = true
tokio.workspace = true
