[package]
name = "cloudrun"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
produktive-deploy = { path = "../deploy" }

async-trait.workspace = true
chrono.workspace = true
jsonwebtoken.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true
