[package]
name = "produktive-deploy-worker"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "produktive-deploy-worker"
path = "src/main.rs"

[dependencies]
produktive-deploy = { path = "../deploy" }
produktive-entity = { path = "../entity" }
fly = { path = "../fly" }
cloudrun = { path = "../cloudrun" }
depot = { path = "../depot" }

anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
dotenvy.workspace = true
reqwest.workspace = true
sea-orm.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
