[package]
name = "produktive-deploy"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "deploy"
path = "src/lib.rs"

[dependencies]
async-trait.workspace = true
chacha20poly1305.workspace = true
chrono.workspace = true
hex.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true

