[package]
name = "produktive-discord-bot"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "produktive-discord-bot"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
chrono.workspace = true
produktive-ai = { path = "../ai" }
produktive-entity = { path = "../entity" }
rand_core.workspace = true
sea-orm.workspace = true
serde_json.workspace = true
serenity.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
