[package]
name = "fly"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
produktive-deploy = { path = "../deploy" }

async-trait.workspace = true
chrono.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
url.workspace = true

[dev-dependencies]
uuid.workspace = true
