[package]
name = "produktive-logs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
url.workspace = true
chrono.workspace = true

[dev-dependencies]
tokio.workspace = true
