[package]
name = "produktive-mcp"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
chrono.workspace = true
hex.workspace = true
produktive-entity = { path = "../entity" }
rand_core.workspace = true
rust-mcp-sdk = "0.9.0"
sea-orm.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
unkey-rs = { path = "../unkey" }
uuid.workspace = true
