[package]
name = "polar-rs"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Async Rust SDK for the Polar API"

[dependencies]
http = "1.4"
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
standardwebhooks = "1.0"
thiserror.workspace = true
