[package]
name = "unstatus-probe"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
unstatus-entity = { path = "../entity" }
unstatus-dsl = { path = "../dsl" }

tokio.workspace = true
reqwest.workspace = true
futures-util.workspace = true
surge-ping.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
url.workspace = true
uuid.workspace = true
anyhow.workspace = true
tracing.workspace = true
