[package]
name = "tigris"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aws-config.workspace = true
aws-credential-types.workspace = true
aws-sdk-s3.workspace = true
aws-sigv4.workspace = true
aws-smithy-async = { version = "1", features = ["rt-tokio"] }
reqwest.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
url.workspace = true
uuid.workspace = true
utoipa = { version = "5", features = ["chrono"] }

[dev-dependencies]
tokio.workspace = true
