[package]
name = "unkey-rs"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Async Rust SDK for the Unkey v2 API"

[features]
default = []
tracing = ["dep:tracing"]

[dependencies]
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing = { workspace = true, optional = true }
