[package]
name = "unstatus-worker"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "unstatus-worker"
path = "src/main.rs"

[dependencies]
unstatus-probe = { path = "../probe" }

anyhow.workspace = true
dotenvy.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
