[package]
name = "produktive-worker"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "produktive-worker"
path = "src/main.rs"

[dependencies]
produktive-probe = { path = "../probe" }

anyhow.workspace = true
dotenvy.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
